twitter-data-pipeline/kafka-docker-k8s-deployment/kafka-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.service.type: LoadBalancer
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.network/twitterdatapipeline-kafka-network: "true"
    io.kompose.service: kafka
  name: kafka
spec:
  containers:
    - env:
        - name: KAFKA_ADVERTISED_LISTENERS
          value: INTERNAL://kafka:9092,EXTERNAL_SAME_HOST://localhost:29092
        - name: KAFKA_BROKER_ID
          value: "1"
        - name: KAFKA_INTER_BROKER_LISTENER_NAME
          value: INTERNAL
        - name: KAFKA_LISTENERS
          value: EXTERNAL_SAME_HOST://:29092,EXTERNAL_DIFFERENT_HOST://:29093,INTERNAL://:9092
        - name: KAFKA_LISTENER_SECURITY_PROTOCOL_MAP
          value: INTERNAL:PLAINTEXT,EXTERNAL_SAME_HOST:PLAINTEXT,EXTERNAL_DIFFERENT_HOST:PLAINTEXT
        - name: KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR
          value: "1"
        - name: KAFKA_ZOOKEEPER_CONNECT
          value: zookeeper:2181
      image: confluentinc/cp-kafka:latest
      name: kafka
      ports:
        - containerPort: 29092
        - containerPort: 29093
      resources: {}
  restartPolicy: OnFailure
status: {}
