twitter-data-pipeline/kafka-docker-k8s-deployment/zookeeper-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.service.type: LoadBalancer
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.network/twitterdatapipeline-kafka-network: "true"
    io.kompose.service: zookeeper
  name: zookeeper
spec:
  containers:
    - env:
        - name: ZOOKEEPER_CLIENT_PORT
          value: "2181"
        - name: ZOOKEEPER_TICK_TIME
          value: "2000"
      image: confluentinc/cp-zookeeper:latest
      name: zookeeper
      ports:
        - containerPort: 2181
      resources: {}
  restartPolicy: OnFailure
status: {}
