twitter-data-pipeline/kafka-docker-k8s-deployment/kafka-tcp-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.service.type: LoadBalancer
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: kafka-tcp
  name: kafka-tcp
spec:
  ports:
    - name: "29092"
      port: 29092
      targetPort: 29092
    - name: "29093"
      port: 29093
      targetPort: 29093
  selector:
    io.kompose.service: kafka
  type: LoadBalancer
status:
  loadBalancer: {}
