twitter-data-pipeline/kafka-docker-k8s-deployment/twitterdatapipeline-kafka-network-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: twitterdatapipeline-kafka-network
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/twitterdatapipeline-kafka-network: "true"
  podSelector:
    matchLabels:
      io.kompose.network/twitterdatapipeline-kafka-network: "true"
